--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 	<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
-
+	<link rel="stylesheet" href="libs/font-awesome-4.6.3/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="css/main.min.css">
 
 	<!-- Chrome, Firefox OS and Opera -->
@@ -47,8 +47,73 @@
 		</div>
 	</section>
 
+	<section class="introducing">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="title">Introducing the industry’s most flexible suite of managed <br/> infrastructure and services.</div>
+					<p class="descript">In the hybrid, multi-cloud era of IT, there is no one-size-fits-all infrastructure solution. Your business <br/> does not fit in a pre-defined box, so why should your managed hosting plan?   </p>
+				</div>
+			</div>
+		</div>
+	</section>
 
 
+	<section class="step_1">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="title">Step 1: Start by choosing your infrastructure. </div>
+					<p class="descript">We’ll manage your architecture whether it’s hosted with us or with them. The choice is yours, onboarded and supported 24x7x365 by our Service First technicians. Explore infrastructure options below then layer a customized Managed Services plan in the next step.</p>
+
+					<ul class="step_wrap">
+						<li class="step_item">
+							<a href="#">
+								<div class="step_item_img"><img src="img/s_1.png" alt=""></div>
+								<span class="step_item_title">Amazon Web Services (AWS)</span>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+							</a>
+						</li>
+						<li class="step_item">
+							<a href="#">
+								<div class="step_item_img"><img src="img/s_2.png" alt=""></div>
+								<span class="step_item_title">Microsoft Azure</span>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+							</a>
+						</li>
+						<li class="step_item">
+							<a href="#">
+								<div class="step_item_img"><img src="img/s_3.png" alt=""></div>
+								<span class="step_item_title">Dedicated Private Cloud</span>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+							</a>
+						</li>
+						<li class="step_item">
+							<a href="#">
+								<div class="step_item_img"><img src="img/s_4.png" alt=""></div>
+								<span class="step_item_title">Dedicated Servers</span>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+							</a>
+						</li>
+						<li class="step_item">
+							<a href="#">
+								<div class="step_item_img"><img src="img/s_5.png" alt=""></div>
+								<span class="step_item_title">Hybrid Architectures</span>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+							</a>
+						</li>
+						<li class="step_item">
+							<a href="#">
+								<div class="step_item_img"><img src="img/s_6.png" alt=""></div>
+								<span class="step_item_title">Public Cloud</span>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+							</a>
+						</li>
+					</ul>	
+				</div>
+			</div>
+		</div>
+	</section>			
 
 	<section class="step_2">
 		<div class="container">
@@ -112,6 +177,32 @@
 						</li>
 						
 					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="respond" style="background-image: url(img/sl_bg.jpg);">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="slider_wr owl-carousel">
+						<div class="item">
+							<p class="respond_text">“SingleHop's network reachability is well above average, and their reliability between data centers 
+								is the best we've experienced. That's a huge benefit for SaaS providers, who necessarily need to be ‘always on.’ ” 
+							</p>
+							<span>Paul Kreiner,  Infrastructure Engineer atTSheets</span>
+							<a href="#" class="button_green">read the story</a>
+						</div>	
+
+						<div class="item">
+							<p class="respond_text">“SingleHop's network reachability is well above average, and their reliability between data centers 
+								is the best we've experienced. That's a huge benefit for SaaS providers, who necessarily need to be ‘always on.’ ” 
+							</p>
+							<span>Paul Kreiner,  Infrastructure Engineer atTSheets</span>
+							<a href="#" class="button_green">read the story</a>
+						</div>	
+					</div>
 				</div>
 			</div>
 		</div>
